--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
 
-    <title>reveal.js</title>
+    <title>Operasional Perusahaan</title>
 
     <link rel="stylesheet" href="dist/reset.css" />
     <link rel="stylesheet" href="dist/reveal.css" />
@@ -19,6 +19,10 @@
   <body>
     <div class="reveal">
       <div class="slides">
+        <section>
+          <h1>Operasional Perusahaan</h1>
+          <h3>Operasional Perusahaan</h3>
+        </section>
         <section data-background-color="#2c3e50" data-transition="slide">
           <h4 style="color: #ecf0f1">Understanding What "Data-Driven" Means</h4>
           <p style="color: #ecf0f1">
